--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="chat-header">
 	<div class="header">
 		<h1>대구은행 챗봇 시스템</h1>
-		<span class="logo"><img src="img/logo.gif" alt="DGB대구은행"></span>
+		<span class="logo"><img src="img/logo.gif" alt="DGB대구은행DGB대구은행"></span>
 	</div>
 	<div class="title">
 		<h2>김여울 (대구은행 본사, 여신담당, 차장)</h2>
